# zero-double-blind-core

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  double_blind.postman_collection.json  render.yaml  zero.pem
.github/workflows/: aws.yml
keys/: patient_random.pk  patient_random.vk
src/: main.rs
src/application/service/: auth_service.rs  interview_service.rs  mod.rs  patient_service.rs  randomization_service.rs  user_service.rs
src/domain/entity/: answer_entity.rs  auditable_entity.rs  clinical_trail_entity.rs  clinical_trial_status_entity.rs  form_entity.rs  group_assignment_entity.rs  interview_entity.rs  interview_stage_entity.rs  interview_status_entity.rs  mod.rs  participant_data_entity.rs  participant_profile_entity.rs  patient_entity.rs  question_entity.rs  researcher_entity.rs  user_entity.rs
src/infrastructure/: database.rs  mod.rs
src/infrastructure/error/: error_handler.rs
src/infrastructure/interface/: interview_repository.rs  mod.rs  patient_repository.rs  user_repository.rs
src/infrastructure/security/: auth_util.rs  jwt_util.rs  mod.rs
src/infrastructure/solana/: account_manager.rs  account_verifier.rs  keypair_loader.rs  mod.rs  round_submitter.rs  seed_util.rs  solana_client.rs  tx_sender.rs  upload_vk.rs  verifier.rs  vk_codec.rs  vk_uploader.rs  zk_instructions.rs
src/infrastructure/util/: hash_util.rs
src/infrastructure/zk/: mod.rs  poseidon.rs  prove.rs  randomization_circuit.rs  trusted_setup.rs
src/repository/: auth_mongo_repository.rs  interview_mongo_repository.rs  mod.rs  patient_mongo_repository.rs  user_mongo_repository.rs
src/web/: mod.rs
src/web/controller/: auth_controller.rs  interview_controller.rs  mod.rs  patient_controller.rs  user_controller.rs
src/web/controller/request/: mod.rs  user_request.rs
src/web/controller/response/: mod.rs  randomization_response.rs  user_response.rs
src/web/route/: auth_route.rs  interview_route.rs  mod.rs  patient_route.rs  user_route.rs
util/: config.yml  id.json
workflow/: workflow.yaml
